infra/k8s/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.k8s.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 88
